# search_engine

./: CMakeLists.txt  Checks.h  ConverterJSON.cpp  ConverterJSON.h  Exceptions.h  InvertedIndex.cpp  README.md  SearchServer.cpp  config.json  main.cpp  requests.json  tests.cpp
data/: answers.json  config.json  file5.txt  requests.json
include/: Checks.h  ConverterJSON.h  Entry.h  Exceptions.h  InvertedIndex.h  SearchServer.h
nlohmann_json/: .editorconfig
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
test/: tests.cpp
